--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-slider": "^0.11.2",
-    "semantic-ui-react": "^0.82.5"
+    "semantic-ui-react": "^0.82.5",
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
